Updated ODK to 1.0.1, fixes and improvements
* Updated ODK to latest - 1.0.1
  * Supports isRunningOnOuyaHardware - BROKEN IN ODK 1.0.1, will always return false
  * Supports getOdkVersionNumber
  * Supports MENU button quick press (simulates on the Unity side by creating a 1-frame press event)
* Ported latest iap-sample-app code over
  * Kept product identifier-based purchase method (as opposed to having to pass in Product object)
  * Incorporates encryption/decryption and public key generation.
  * Uses Ouya helper classes to negotiate failures and authentication changes
* Initializes and re-initializes OuyaController in onCreate and device reconnection
* Example code now uses player number reported to OuyaBridge.devices properly
  * Testable by connecting 2 controllers and removing batteries to controller #0 and waiting for it to disconnect
* Example UI layout improvements
* Unity-side improvements
  * Send onProductPurchased event in editor for testing
  * localizedPrice method on Product class.
  * Limit input debug messages to Development Builds (isDebugBuild)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 ExampleProject/ExampleProject.sln
 ExampleProject/ExampleProject.userprefs
 ExampleProject/ExampleProject-csharp.sln
+ExampleProject/Assembly-CSharp-Editor.pidb
+ExampleProject/Assembly-CSharp-firstpass-vs.csproj
+ExampleProject/Assembly-CSharp-firstpass.csproj
+ExampleProject/Assembly-CSharp-firstpass.pidb
+ExampleProject/Assembly-CSharp-Editor-vs.csproj
+ExampleProject/Assembly-CSharp-Editor.csproj
